openshift/skeletor/openshift/routes.yml
apiVersion: v1
kind: Route
metadata:
  name: nginx-route
spec:
  to:
    kind: Service
    name: nginx-service
